--- a/index.html
+++ b/index.html
@@ -70,82 +70,112 @@
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/1st-img.jpg">
-                            <div class="card-content">
+                         <a href="/1st-p/index.html">
+
+                        <div class="card-content">
                                 <h3>Tribute Website</h3>
                             </div>
+                            </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/2nd-img.png">
-                            <div class="card-content">
-                                <h3>Job Application</h3>
-                            </div>
+                         <a href="/2nd-login-page/index.html">
+
+                             <div class="card-content">
+                                 <h3>Job Application</h3>
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/3rd-img.png">
-                            <div class="card-content">
+                          <a href="/3rd-website/index.html">
+
+                           <div class="card-content">
                                 <h3>Parallax website</h3>
                             </div>
+                            </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/4th-img.jpg">
-                            <div class="card-content">
+                          <a href="/4th-landing page/index.html">
+
+                           <div class="card-content">
                                 <h3>Landing Page</h3>
                             </div>
+                            </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/5th-img.jpg">
-                            <div class="card-content">
+                           <a href="/5th-food/index.html">
+
+                         <div class="card-content">
                                 <h3>Food Website</h3>
                             </div>
+                            </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/6th-img.jpg">
-                            <div class="card-content">
+                          <a href="/6th-Music/index.html">
+
+                           <div class="card-content">
                                 <h3>Music</h3>
                             </div>
+                            </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/7th-img.jpg">
+                          <a href="/7th-youtube/index.html">
+
                             <div class="card-content">
                                 <h3>Youtube</h3>
                             </div>
+                            </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/8th-ig.jpg">
-                            <div class="card-content">
+                           <a href="/8th-document/index.html">
+
+                       <div class="card-content">
                                 <h3>Javascript document</h3>
                             </div>
+                            </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/9th-img.jpg">
-                            <div class="card-content">
+                           <a href="/9th-BlogWebsite/home.html">
+
+                         <div class="card-content">
                                 <h3>Blog Website</h3>
                             </div>
+                            </a>
                         </div>
 
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/10th-img.jpg">
-                            <div class="card-content">
+                           <a href="/v53-1st project/index.html">
+
+                         <div class="card-content">
                                 <h3>Netflix</h3>
                             </div>
+                            </a>
                         </div>
 
                     </div>
