--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </div>
             <div class="cv" id="cv">
                 <button class="cv-btn">
-                    <a href="#">DOWNLOAD CV</a>
+                    <a href="assets/My Resume (1).pdf">DOWNLOAD CV</a>
 
                 </button>
             </div>
