--- a/4th-landing page/index.html
+++ b/4th-landing page/index.html
@@ -26,64 +26,70 @@
     </section>
     <section class="second-section">
         <div class="grid-item">
-        <div class="card">
-            <div class="card-img">
-                <img src="assets/web.png" alt="">
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/web.png" alt="">
+                </div>
+                <div class="card-content">
+                    <h2>web developer</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, sequi!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, magni ipsam labore accusantium
+                        error
+                        rerum fugiat. Culpa, unde eius atque aspernatur vitae accusantium nulla rerum.</p>
+                </div>
             </div>
-            <div class="card-content">
-                <h2>web developer</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, sequi!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, magni ipsam labore accusantium error
-                    rerum fugiat. Culpa, unde eius atque aspernatur vitae accusantium nulla rerum.</p>
-            </div>
-        </div>
-        </div>
-        <div class="grid-item">
-        <div class="card">
-            <div class="card-img">
-                <img src="assets/mobile.png" alt="">
-            </div>
-            <div class="card-content">
-                <h2>app developer</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, sequi!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus veritatis in voluptate commodi nostrum
-                    voluptatem tempore qui sed. Culpa optio veniam enim, illum explicabo laboriosam.
-                </p>
-            </div>
-
-        </div>
         </div>
         <div class="grid-item">
-        <div class="card">
-            <div class="card-img">
-                <img src="assets/uiux.png" alt="">
-            </div>
-            <div class="card-content">
-                <h2>UI/UX designer</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, sequi!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id mollitia corrupti nihil, omnis illo
-                    tempora, eveniet vel cumque, eligendi excepturi maiores consequuntur suscipit ut ea.
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/mobile.png" alt="">
+                </div>
+                <div class="card-content">
+                    <h2>app developer</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, sequi!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus veritatis in voluptate commodi
+                        nostrum
+                        voluptatem tempore qui sed. Culpa optio veniam enim, illum explicabo laboriosam.
+                    </p>
+                </div>
 
-                </p>
             </div>
-
         </div>
+        <div class="grid-item">
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/uiux.png" alt="">
+                </div>
+                <div class="card-content">
+                    <h2>UI/UX designer</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, sequi!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id mollitia corrupti nihil, omnis illo
+                        tempora, eveniet vel cumque, eligendi excepturi maiores consequuntur suscipit ut ea.
+
+                    </p>
+                </div>
+
+            </div>
         </div>
     </section>
     <section class="third-section">
         <div class="left-card">
-        <div class="content-text">   <h1>contect us</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sapiente inventore adipisci neque,
-                aliquam, nihil, vitae in laboriosam at incidunt exercitationem voluptate quis debitis. Recusandae.</p>
-            <p>tarunbarman9797@gmail.com</p>
-        </div>
+            <div class="content-text">
+                <h1>contect us</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sapiente inventore adipisci neque,
+                    aliquam, nihil, vitae in laboriosam at incidunt exercitationem voluptate quis debitis. Recusandae.
+                </p>
+                <p>tarunbarman9797@gmail.com</p>
+            </div>
         </div>
         <div class="right-card">
-          <div class="content-text"> <h1>about us</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sapiente inventore adipisci neque,
-                aliquam, nihil, vitae in laboriosam at incidunt exercitationem voluptate quis debitis. Recusandae.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, quisquam!</p>
-        </div>
+            <div class="content-text">
+                <h1>about us</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sapiente inventore adipisci neque,
+                    aliquam, nihil, vitae in laboriosam at incidunt exercitationem voluptate quis debitis. Recusandae.
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, quisquam!</p>
+            </div>
         </div>
     </section>
     <footer>
