--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/1st-img.jpg">
-                         <a href="/1st-p/index.html">
+                            <a href="/1st-p/index.html">
 
-                        <div class="card-content">
-                                <h3>Tribute Website</h3>
-                            </div>
+                                <div class="card-content">
+                                    <h3>Tribute Website</h3>
+                                </div>
                             </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/2nd-img.png">
-                         <a href="/2nd-login-page/index.html">
+                            <a href="/2nd-login-page/index.html">
 
-                             <div class="card-content">
-                                 <h3>Job Application</h3>
+                                <div class="card-content">
+                                    <h3>Job Application</h3>
                                 </div>
                             </a>
                         </div>
@@ -92,77 +92,77 @@
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/3rd-img.png">
-                          <a href="/3rd-website/index.html">
+                            <a href="/3rd-website/index.html">
 
-                           <div class="card-content">
-                                <h3>Parallax website</h3>
-                            </div>
+                                <div class="card-content">
+                                    <h3>Parallax website</h3>
+                                </div>
                             </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/4th-img.jpg">
-                          <a href="/4th-landing page/index.html">
+                            <a href="/4th-landing page/index.html">
 
-                           <div class="card-content">
-                                <h3>Landing Page</h3>
-                            </div>
+                                <div class="card-content">
+                                    <h3>Landing Page</h3>
+                                </div>
                             </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/5th-img.jpg">
-                           <a href="/5th-food/index.html">
+                            <a href="/5th-food/index.html">
 
-                         <div class="card-content">
-                                <h3>Food Website</h3>
-                            </div>
+                                <div class="card-content">
+                                    <h3>Food Website</h3>
+                                </div>
                             </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/6th-img.jpg">
-                          <a href="/6th-Music/index.html">
+                            <a href="/6th-Music/index.html">
 
-                           <div class="card-content">
-                                <h3>Music</h3>
-                            </div>
+                                <div class="card-content">
+                                    <h3>Music</h3>
+                                </div>
                             </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/7th-img.jpg">
-                          <a href="/7th-youtube/index.html">
+                            <a href="/7th-youtube/index.html">
 
-                            <div class="card-content">
-                                <h3>Youtube</h3>
-                            </div>
+                                <div class="card-content">
+                                    <h3>Youtube</h3>
+                                </div>
                             </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/8th-ig.jpg">
-                           <a href="/8th-document/index.html">
+                            <a href="/8th-document/index.html">
 
-                       <div class="card-content">
-                                <h3>Javascript document</h3>
-                            </div>
+                                <div class="card-content">
+                                    <h3>Javascript document</h3>
+                                </div>
                             </a>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/9th-img.jpg">
-                           <a href="/9th-BlogWebsite/home.html">
+                            <a href="/9th-BlogWebsite/home.html">
 
-                         <div class="card-content">
-                                <h3>Blog Website</h3>
-                            </div>
+                                <div class="card-content">
+                                    <h3>Blog Website</h3>
+                                </div>
                             </a>
                         </div>
 
@@ -170,11 +170,11 @@
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/10th-img.jpg">
-                           <a href="/v53-1st project/index.html">
+                            <a href="/v53-1st project/index.html">
 
-                         <div class="card-content">
-                                <h3>Netflix</h3>
-                            </div>
+                                <div class="card-content">
+                                    <h3>Netflix</h3>
+                                </div>
                             </a>
                         </div>
 
@@ -192,35 +192,50 @@
             <div class="contect-container">
                 <h1>Let's work together...</h1>
                 <div class="contect-text">
-                    <div class="contect-way">
-                        <i class="fa-brands fa-linkedin"></i>
-                        <h3>Linkedin</h3>
+                    <a href="#">
+                        <div class="contect-way">
+                            <i class="fa-brands fa-linkedin"></i>
+                            <h3>Linkedin</h3>
+                            <br>
+                        </div>
+                    </a>
 
-                    </div>
-                    <div class="contect-way">
-                        <i class="fa-brands fa-twitter"></i>
-                        <h3>Twitter</h3>
+                    <a href="#">
 
-                    </div>
-                    <div class="contect-way">
-                        <i class="fa-brands fa-instagram"></i>
-                        <h3>Instagram</h3>
+                        <div class="contect-way">
+                            <i class="fa-brands fa-twitter"></i>
+                            <h3>Twitter</h3>
 
-                    </div>
+                        </div>
+                    </a>
+                    <a href="https://github.com/TarunBarman">
+
+                        <div class="contect-way">
+                            <i class="fa-brands fa-github"></i>
+                            <h3>GitHub</h3>
+
+                        </div>
+                    </a>
                 </div>
                 <div class="bottom-contect-text">
 
 
-                    <div class="contect-way">
-                        <i class="fa-solid fa-envelope"></i>
-                        <h3>Send mail</h3>
+                    <a href="/contect-page/index.html">
 
-                    </div>
-                    <div class="contect-way">
-                        <i class="fa-solid fa-mobile"></i>
-                        <h3>Contect</h3>
+                        <div class="contect-way">
+                            <i class="fa-solid fa-envelope"></i>
+                            <h3>Send mail</h3>
 
-                    </div>
+                        </div>
+                    </a>
+                    <a href="/contect-page/index.html">
+
+                        <div class="contect-way">
+                            <i class="fa-solid fa-mobile"></i>
+                            <h3>Contect</h3>
+
+                        </div>
+                    </a>
                 </div>
 
 
