--- a/2nd-login-page/index.html
+++ b/2nd-login-page/index.html
@@ -62,10 +62,11 @@
 
                         </div>
                         <div class="form_control">
+                            <!-- <div class="cv_text"> -->
                             <label for="Upload">Upload Your Cv</label>
                             <input type="file" id="Upload" name="Upload">
-
-                        </div>
+</div>
+                        <!-- </div> -->
 
                     </div>
 
