--- a/contect-page/index.html
+++ b/contect-page/index.html
@@ -27,7 +27,7 @@
 
                         </div>
                         <div class="form_control">
-                            <label for="Email">Email (required)</label>
+                            <label for="Email">Email(required)</label>
                             <input id="Email" placeholder="Enter Your Email Id...">
 
                         </div>
@@ -42,7 +42,7 @@
                             </select>
                         </div>
                         <div class="textarea_control">
-                            <label for="Address">Message(requierd)</label>
+                            <label for="Address">Message(required)</label>
                             <textarea name="Address" id="Address" cols="30" rows="10"></textarea>
 
                         </div>
@@ -62,15 +62,16 @@
 
                         </div>
                         <div class="form_control">
-                            <label for="Upload">Upload document</label>
+                            <!-- <div class="cv_text"> -->
+                            <label for="Upload">Upload Your file</label>
                             <input type="file" id="Upload" name="Upload">
-
-                        </div>
+</div>
+                        <!-- </div> -->
 
                     </div>
 
                     <div class="button_container">
-                        <button type="submit">Send Message</button>
+                        <button type="submit">Apply Now</button>
                     </div>
                 </form>
 
