--- a/index.html
+++ b/index.html
@@ -179,6 +179,18 @@
                         </div>
 
                     </div>
+                    <div class="grid-item">
+                        <div class="card">
+                            <img src="assets/Frame 10.jpg">
+                            <a href="/travel/index.html">
+
+                                <div class="card-content">
+                                    <h3>Salty</h3>
+                                </div>
+                            </a>
+                        </div>
+
+                    </div>
                 </div>
             </div>
             <div class="cv" id="cv">
