--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <div class="grid-item">
                         <div class="card">
                             <img src="assets/Frame 10.jpg">
-                            <a href="/travel/index.html">
+                            <a href="/salty/index.html">
 
                                 <div class="card-content">
                                     <h3>Salty</h3>
