--- a/salty/index.html
+++ b/salty/index.html
@@ -91,7 +91,7 @@
                     <div class="highlight-content">
                         <a href="#">
                             <img src="assets/img/row1.png" alt="tower">
-                            <h3>Sea Port</h3>
+                            <h3>Snow</h3>
                         </a>
                     </div>
                 </div>
@@ -114,16 +114,16 @@
                 <div class="bos-container">
                     <div class="highlight-content">
                         <a href="#">
-                            <img src="assets/img/row4 2.png" alt="tower">
-                            <h3>Temple</h3>
+                            <img src="assets/img/row5.png" alt="tower">
+                            <h3>Mountain</h3>
                         </a>
                     </div>
                 </div>
                 <div class="bos-container">
                     <div class="highlight-content">
                         <a href="#">
-                            <img src="assets/img/row5.png" alt="tower">
-                            <h3>Mountain</h3>
+                            <img src="assets/img/row4 2.png" alt="tower">
+                            <h3>Temple</h3>
                         </a>
                     </div>
                 </div>
@@ -179,8 +179,8 @@
             <div class="destination-content">
                 <div class="box">
                     <img src="assets/img/img1.png" alt="">
-                    <h3>Thailand Tour</h3>
-                    <p>Thailand Tour</p>
+                    <h3>Mountai hiking Tour,Manali</h3>
+                    <p>Manali,India</p>
                     <div class="box-main">
                         <div class="box-text">
                             <h5><i class="fa-solid fa-indian-rupee-sign">89999</i></h5>
@@ -192,8 +192,8 @@
                 </div>
                 <div class="box">
                     <img src="assets/img/img2.png" alt="">
-                    <h3>Thailand Tour</h3>
-                    <p>Thailand Tour</p>
+                    <h3>The grand Canyon, Arizona</h3>
+                    <p>The grand Canyon, Arizona</p>
                     <div class="box-main">
                         <div class="box-text">
                             <h5><i class="fa-solid fa-indian-rupee-sign">49999</i></h5>
@@ -205,8 +205,10 @@
                 </div>
                 <div class="box">
                     <img src="assets/img/img3.png" alt="">
-                    <h3>Thailand Tour</h3>
-                    <p>Thailand Tour</p>
+                    <h3>Machu picchu, Peru
+                    </h3>
+                    <p>Machu picchu, Peru
+                    </p>
 
                     <div class="box-main">
                         <div class="box-text">
@@ -246,7 +248,7 @@
                         <div class="tst-text">
 
 
-                            <h4>Andrew sarma</h4>
+                            <h4>Ajay sarma</h4>
                             <p>Enterpreneur</p>
                         </div>
 
