--- a/salty/index.html
+++ b/salty/index.html
@@ -430,6 +430,7 @@
                 <img src="assets/img/card.png" alt="card">
             </div>
         </section>
+        </main>
         <script src="script.js"></script>
 </body>
 
