--- a/9th-BlogWebsite/home.html
+++ b/9th-BlogWebsite/home.html
@@ -63,13 +63,13 @@
                 <img src="assets/hero.png" alt="hero">
             </div>
         </section>
-        <div class="long-card">
-            <div class="card-content">
-                <h1>long established</h1>
+        <section class="long-card">
+            <div class="long-card-content">
+
+                <h2>long established</h2>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when
                     looking at its layout. The point of using Lorem Ipsum is that....</p>
                 <div class="card-status">
-
                     <p>January 20th 2024</p>
                     <a href="blog.html"> <button class="card-btn">
                             Read More
@@ -80,11 +80,11 @@
                 <img src="assets/long-card.png" alt="sitting">
             </div>
 
-        </div>
+        </section>
 
 
 
-        <div class="card">
+        <section class="card container">
 
             <div class="card-wraped">
 
@@ -93,7 +93,7 @@
                         <img src="assets/card1.png" alt="card1">
                     </div>
                     <div class="card-content">
-                        <h1>long established</h1>
+                        <h3>long established</h3>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page
                             when
@@ -119,7 +119,7 @@
                         <img src="assets/card2.png" alt="card1">
                     </div>
                     <div class="card-content">
-                        <h1>long established</h1>
+                        <h3>long established</h3>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page when
                             looking at its layout. The point of using Lorem Ipsum is that....</p>
@@ -144,7 +144,7 @@
                         <img src="assets/card3.png" alt="card1">
                     </div>
                     <div class="card-content">
-                        <h1>long established</h1>
+                        <h3>long established</h3>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page
                             when
@@ -163,12 +163,12 @@
 
 
             </div>
-        </div>
+        </section>
 
-        <div class="long-card">
+        <section class="long-card container">
 
-            <div class="card-content">
-                <h1> What is Lorem Ipsum? </h1>
+            <div class="long-card-content">
+                <h2> What is Lorem Ipsum? </h2>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when
                     looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
                     distribution...</p>
@@ -185,7 +185,7 @@
             </div>
 
 
-        </div>
+        </section>
         <div class="purple">
             <a href="blog.html"> <button class="purple-btn">
                     See more
@@ -195,9 +195,9 @@
     </main>
     <hr>
     <footer>
-        <div class="footer-content">
+        <div class="footer-content container">
 
-            <h3>GreatZone 2024 copyright all rights reserved</h3>
+            <h4>GreatZone 2024 copyright all rights reserved</h4>
         </div>
         <ul>
             <li>
