--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             </div>
             <div class="cv" id="cv">
                 <button class="cv-btn">
-                    <a href="assets/My Resume (1).pdf">DOWNLOAD CV</a>
+                    <a href="assets/tarunres.pdf">DOWNLOAD CV</a>
                 </button>
             </div>
         </section>
